# constraint_factors

./: .gitignore  README.md  pyproject.toml
docs/: 00-constraint_factors.md  00-message_passing.md  00_code_vs_research_direction_gap_audit.md  00_model_config_reference.md  00_models_and_evaluation_matrix.md  02_dataframe_builder.md  02a_constraint_registry.md  02b_wikidata_retriever.md  03_constraint_registry.md  03_graph.md  04_constraint_labeler.md  04_wikidata_retriever.md  05_data_spec.md  06_graph.md  07_train.md  07a_soft_fix_probability.md  README.md  constraint_types.md
docs-conceptual/: 00-constraint_factors.md  00-message_passing.md  00-results_aligned_constraint_factors.md  07_soft_fix_probability.md  README.md  constraint_factors_research_overview.html  constraint_types.md  supervisor_presentation_structure.md
docs-technical/: 00-constraint_factors.md  00-message_passing.md  00_code_vs_research_direction_gap_audit.md  00_model_config_reference.md  00_models_and_evaluation_matrix.md  00_training_and_evaluation_execution_plan.md  01_data_downloader.md  02_dataframe_builder.md  02b_stratified_benchmark_sampler.md  03_constraint_registry.md  04_wikidata_retriever.md  05_constraint_labeler.md  05_data_spec.md  06_graph.md  07_train.md
notebooks/: nb.ipynb
scripts/: analyze_candidate_oracle.py  analyze_deletion_degeneracy.py  build_constraint_type_catalog.py  diagnose_unsupported_constraints.py  generate_smoke_configs.py  hist_attached_constraints.py  list_constraint_type_items.py  make_experiment_configs.py  make_hparam_search_configs_m1.py  (+1 more)
src/: main.py  (+16 more)
(+121 files in other folders)
