[project]
name = "kg-constraint-repair"
version = "0.1.0"
description = "Executable constraint factors for KG repair"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.1",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["modules*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
